5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3989/executions/1592_1800.log
== TEST (2019-03-29 22:23:17) 
-- CODE:
a = float(input(""))
b = float(input(""))
c = float(input(" "))

formula = (a**2 + b** + c**)/(a+b+c)
print(round(formula, 7))



-- ERROR:
File "XXXX", line 5
    formula = (a**2 + b** + c**)/(a+b+c)
                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 22:23:43) 
-- CODE:
a = float(input(""))
b = float(input(""))
c = float(input(" "))

formula = (a**2 + b**2 + c**2)/(a+b+c)
print(round(formula, 7))



-- OUTPUT:
25.6666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 22:23:58) 
-- CODE:
a = float(input(""))
b = float(input(""))
c = float(input(" "))

formula = (a**2 + b**2 + c**2)/(a+b+c)
print(round(formula, 7))



-- EXECUTION TIME:
0.172705
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.6666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.8680203
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.1509434
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
